--- a/four-card-feature-section/index.html
+++ b/four-card-feature-section/index.html
@@ -16,32 +16,62 @@
 </head>
 
 <body>
+  <header>
+    <h1>
+      Reliable, efficient delivery<br>
+      <span>Powered by Technology</span>
+    </h1>
+    <p>
+      Our Artificial Intelligence powered tools use millions of project data points
+      to ensure that your project is successful
+    </p>
+  </header>
 
-  Reliable, efficient delivery
-  Powered by Technology
+  <!-- Box Section -->
+  <section class="box-section">
 
-  Our Artificial Intelligence powered tools use millions of project data points
-  to ensure that your project is successful
+    <!-- Box Column 1 -->
+    <div class="box-column">
+      <div class="box" id="supervisor">
+        <h3 class="title">Supervisor</h3>
+        <p>Monitors activity to identify project roadblocks</p>
+        <img src="/images/icon-supervisor.svg" alt="Supervisor">
+      </div>
+    </div>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+    <!-- Box Column 2 -->
+    <div class="box-column">
+      <div class="box" id="team-builder">
+        <h3 class="title">Team Builder</h3>
+        <p>Scans our talent network to create the optimal team for your project</p>
+        <img src="/images/icon-team-builder.svg" alt="Team Builder">
+      </div>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+      <div class="box" id="karma">
+        <h3 class="title">Karma</h3>
+        <p>Regularly evaluates our talent to ensure quality</p>
+        <img src="/images/icon-karma.svg" alt="Karma">
+      </div>
+    </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+    <!-- Box Column 3 -->
+    <div class="box-column">
+      <div class="box" id="calculator">
+        <h3 class="title">Calculator</h3>
+        <p>Uses data from past projects to provide better delivery estimates</p>
+        <img src="/images/icon-calculator.svg" alt="Calculator">
+      </div>
+    </div>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
+  </section>
 
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/magbello157" target="_blank">Muhammad A.G. Bello</a>.
     </p>
   </footer>
+
 </body>
 
 </html>
