--- a/four-card-feature-section/index.html
+++ b/four-card-feature-section/index.html
@@ -8,6 +8,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 500px)" href="/css/mobile.css">
 
   <title>Frontend Mentor | Four card feature section</title>
 
@@ -31,7 +32,7 @@
   <section class="box-section">
 
     <!-- Box Column 1 -->
-    <div class="box-column">
+    <div>
       <div class="box" id="supervisor">
         <h3 class="title">Supervisor</h3>
         <p>Monitors activity to identify project roadblocks</p>
@@ -40,7 +41,7 @@
     </div>
 
     <!-- Box Column 2 -->
-    <div class="box-column">
+    <div>
       <div class="box" id="team-builder">
         <h3 class="title">Team Builder</h3>
         <p>Scans our talent network to create the optimal team for your project</p>
@@ -55,7 +56,7 @@
     </div>
 
     <!-- Box Column 3 -->
-    <div class="box-column">
+    <div>
       <div class="box" id="calculator">
         <h3 class="title">Calculator</h3>
         <p>Uses data from past projects to provide better delivery estimates</p>
