--- a/four-card-feature-section/index.html
+++ b/four-card-feature-section/index.html
@@ -7,8 +7,8 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" media="screen and (max-width: 500px)" href="/css/mobile.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 500px)" href="./css/mobile.css">
 
   <title>Frontend Mentor | Four card feature section</title>
 
@@ -36,7 +36,7 @@
       <div class="box" id="supervisor">
         <h3 class="title">Supervisor</h3>
         <p>Monitors activity to identify project roadblocks</p>
-        <img src="/images/icon-supervisor.svg" alt="Supervisor">
+        <img src="./images/icon-supervisor.svg" alt="Supervisor">
       </div>
     </div>
 
@@ -45,13 +45,13 @@
       <div class="box" id="team-builder">
         <h3 class="title">Team Builder</h3>
         <p>Scans our talent network to create the optimal team for your project</p>
-        <img src="/images/icon-team-builder.svg" alt="Team Builder">
+        <img src="./images/icon-team-builder.svg" alt="Team Builder">
       </div>
 
       <div class="box" id="karma">
         <h3 class="title">Karma</h3>
         <p>Regularly evaluates our talent to ensure quality</p>
-        <img src="/images/icon-karma.svg" alt="Karma">
+        <img src="./images/icon-karma.svg" alt="Karma">
       </div>
     </div>
 
@@ -60,7 +60,7 @@
       <div class="box" id="calculator">
         <h3 class="title">Calculator</h3>
         <p>Uses data from past projects to provide better delivery estimates</p>
-        <img src="/images/icon-calculator.svg" alt="Calculator">
+        <img src="./images/icon-calculator.svg" alt="Calculator">
       </div>
     </div>
 
