improve mobile responsiveness

--- a/four-card-feature-section/index.html
+++ b/four-card-feature-section/index.html
@@ -8,7 +8,8 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" media="screen and (max-width: 500px)" href="./css/mobile.css">
+  <link rel="stylesheet" media="screen and (max-width: 1030px)" href="./css/tablet.css">
+  <link rel="stylesheet" media="screen and (max-width: 600px)" href="./css/mobile.css">
 
   <title>Frontend Mentor | Four card feature section</title>
 
