--- a/index.html
+++ b/index.html
@@ -22,12 +22,21 @@
         </tr>
       </thead>
       <tbody>
+        <!-- Four Card Feature Section -->
         <tr>
           <td>
             <li><a href="four-card-feature-section/index.html" target="_blank">Four Card Feature Section</a></li>
           </td>
           <td>Simple feature section with adjascently-placed cards</td>
           <td>CSS layouts, mobile responsiveness</td>
+        </tr>
+        <!-- Base Apparel -->
+        <tr>
+          <td>
+            <li><a href="base-apparel-coming-soon-page/index.html" target="_blank">Base Apparel</a></li>
+          </td>
+          <td>Simple coming soon page</td>
+          <td>CSS layouts, form validation</td>
         </tr>
       </tbody>
     </table>
